# case-generator

./: .gitignore  README.md  flake.nix  pyproject.toml
agl_case_generator/: dev_script.py  manage.py
agl_case_generator/agl_case_generator/: asgi.py  settings.py  urls.py  wsgi.py
agl_case_generator/endoscopy_anticoagulation/: apps.py  urls.py  views.py
